# value-analysist

./: .env.example  .gitignore  README.md  docker-compose.yml  init_project.py  main.py  requirements.txt  start_backend.sh  start_frontend.sh  test_ddgs.py
backend/: inspect_knowledge.py  pyproject.toml  reproduce_issue.py  reset_db.py  test_embedding.py  value_analyst.db
backend/src/: main.py
backend/src/agents/: base_agent.py
backend/src/agents/business_analysis/: agent.py  agents.yaml  tasks.yaml
backend/src/agents/competitor_analysis/: agent.py  agents.yaml  tasks.yaml
backend/src/agents/financial_analysis/: agent.py  agents.yaml  tasks.yaml
backend/src/agents/mda_analysis/: agent.py  agents.yaml  tasks.yaml
backend/src/agents/valuation/: agent.py  agents.yaml  tasks.yaml
backend/src/api/: routes.py
backend/src/core/: config.py  llm_factory.py  patch.py
backend/src/models/: session.py
backend/src/services/: session_service.py  title_generator.py
backend/src/tools/: dcf_calculator_tool.py  financial_table_tool.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.module.css  page.tsx
frontend/src/components/AnalysisView/: AnalysisView.module.css  AnalysisView.tsx
frontend/src/components/DocViewer/: DocViewer.module.css  DocViewer.tsx
frontend/src/components/Loading/: Loading.module.css  Loading.tsx
frontend/src/components/SessionList/: SessionList.module.css  (+1 more)
frontend/src/types/: index.ts
src/: agents.py  config.py  tasks.py
src/config/: agents.yaml  tasks.yaml
src/tools/: pdf_tools.py  report_tools.py
(+2 files in other folders)
