[tool.poetry]
name = "value-analysist-backend"
version = "0.1.0"
description = "Backend for Value Investment Analysis Tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
python-multipart = "^0.0.6"
crewai = "^0.11.0" 
langchain = "^0.1.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
chromadb = "^0.4.15"
# For PDF parsing
pdfplumber = "^0.10.3"
# For environment variables
python-dotenv = "^1.0.0"
# For Async
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
